--- a/projects/portfolio/assets/css/app.css
+++ b/projects/portfolio/assets/css/app.css
@@ -161,7 +161,13 @@ img {
     margin-left: 20px ;
 }
 div.container {
-    max-width: 760px;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+}
+div.header {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  float: left;
 }
